--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -62,6 +62,10 @@
   @nest & ul {
     margin: 0;
     padding: 0;
+
+    @nest & li:first-child {
+      font-weight: bold;
+    }
   }
 
   @nest & ul li a {
