--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -27,10 +27,7 @@
 
 .grid {
   @media (--media-min-medium) {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-column-gap: 2em;
-    grid-template-columns: 3fr 1fr;
+    padding: 0 100px; 
   }
 }
 
@@ -74,24 +71,4 @@
   composes: small from './typography.module.css';
   margin: 2rem 0 3rem;
   color: var(--color-gray);
-}
-
-.categories {
-  border-top: 1px solid var(--color-very-light-gray);
-  margin: 2rem 0 3rem;
-
-  @nest & ul {
-    list-style: none;
-    margin: 0.75rem 0;
-    padding: 0;
-  }
-
-  @nest & ul li {
-    padding: 0.25rem 0;
-  }
-}
-
-.categoriesHeadline {
-  composes: base from './typography.module.css';
-  margin: 0.5rem 0 0;
 }
