--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -12,6 +12,9 @@
   text-transform: uppercase;
   letter-spacing: 0.5px;
   margin: 2rem 0;
+
+  animation-name: fadeIn;
+  animation-duration: 600ms;
 }
 
 .grid {
@@ -22,6 +25,14 @@
   grid-template-columns: 1fr;
   grid-column-gap: 2em;
   grid-row-gap: 2em;
+}
+
+.grid li {
+  animation-name: fadeIn;
+  animation-duration: 600ms;
+  animation-delay: calc(var(--order) * 200ms);
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
 }
 
 .browseMoreNav {
@@ -40,5 +51,16 @@
         color: var(--color-accent);
       }
     }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: translateY(25px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
